src/tests/resources/transcripts/errors/underscore_not_allowed.sif
set _ to 1
(-- error
“_” may not be used as a variable name
--)